# private_pip_package

./: AUTHORS  ChangeLog  README.md  requirements.txt  setup.cfg  setup.py  setup_old.py
PackageMeu.egg-info/: PKG-INFO  SOURCES.txt  pbr.json  requires.txt  top_level.txt
dependencia/: __init__.py  np.py
nomedoimport/modulo/: __init__.py  module.py
pacotinho/: exec.py
sirros/utils/: __init__.py
sirros/utils/detection/: __init__.py  np.py
sirros/utils/general/: __init__.py  utils.py
