[metadata]
name = PackageMeu
author = Arthur Kafer
author-email = arthurkafer@gmail.com
summary = pacote teste
description-file = README.md
home-page = https://github.com/arthurkafer/private_pip_package
classifier =
    Programming Language :: Python :: 3

[files]
packages = 
	nomedoimport
	nomedoimport.modulo